# finalproject_malygin_m25-555

./: Makefile  README.md  final_test.py  main.py  portfolios.json  pyproject.toml  test_scenario.py  users.json  wal.cast  wallet.cast  wallet_demo.cast
finalproject_malygin_m25_555/: main.py
valutatrade_hub/: decorators.py
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: currancies.py  exceptions.py  models.py  usecase.py  utils.py
valutatrade_hub/infra/: database.py  settings.py
valutatrade_hub/parser_service/: api_clients.py  config.py  storage.py  updater.py
